syntax = "proto3";
package admin;

service Admin {
    rpc RegisterAdminRoute (RegisterAdminRouteRequest) returns (Empty);
}

message RegisterAdminRouteRequest {

    repeated PathDefinition routes = 1;
    string protoFile = 2;
    message PathDefinition {
        string path = 1;
        string method = 2;
        string grpcFunction = 3;
    }
}

message Empty {
}
